<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.nglauber.exemplolivro.features.postdetail.PostActivity">

    <data>
        <import type="android.view.View" />

        <variable
            name="post"
            type="br.com.nglauber.exemplolivro.shared.binding.PostBinding" />

        <variable
            name="presenter"
            type="br.com.nglauber.exemplolivro.features.postdetail.PostContract.Presenter" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/post_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/post_hint_text"
                        android:maxLength="500"
                        android:text="@={post.text}" />
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/post_button_add_photo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/content_description_post_select_image"
                    android:onClick="@{()->presenter.selectImage()}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                    app:srcCompat="@drawable/ic_add_photo" />

                <ImageButton
                    android:id="@+id/post_button_add_location"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/content_description_post_choose_locaion"
                    android:onClick="@{()->presenter.selectLocation()}"
                    app:layout_constraintLeft_toRightOf="@+id/post_button_add_photo"
                    app:layout_constraintTop_toTopOf="@+id/post_button_add_photo"
                    app:srcCompat="@drawable/ic_add_location" />

                <Button
                    android:id="@+id/post_button_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawableLeft="@drawable/ic_delete"
                    android:drawableStart="@drawable/ic_delete"
                    android:onClick="@{()->presenter.deletePost(post)}"
                    android:text="@string/menu_post_delete"
                    android:visibility="@{post.id == 0L ? View.GONE : View.VISIBLE}"
                    app:layout_constraintRight_toLeftOf="@+id/post_button_save"
                    app:layout_constraintTop_toTopOf="@+id/post_button_add_location" />

                <Button
                    android:id="@+id/post_button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawableLeft="@drawable/ic_done"
                    android:drawableStart="@drawable/ic_done"
                    android:enabled="@{post.text.length() > 0}"
                    android:onClick="@{()->presenter.savePost(post)}"
                    android:text="@string/menu_post_save"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/post_button_delete" />

                <FrameLayout
                    android:id="@+id/post_image_photo_container"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:visibility="@{post.photoUrl != null ? View.VISIBLE : View.GONE}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/post_image_location_container"
                    app:layout_constraintTop_toBottomOf="@+id/post_button_add_photo">

                    <ImageView
                        android:id="@+id/post_image_photo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#CCC"
                        android:contentDescription="@string/content_description_post_image"
                        android:scaleType="centerCrop"
                        android:src="@{post.photoUrl}" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="end"
                        android:contentDescription="@string/content_description_post_delete_image"
                        android:onClick="@{()->presenter.updateImage((String)null)}"
                        app:srcCompat="@drawable/ic_remove_image" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/post_image_location_container"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:visibility="@{post.locationUrl != null ? View.VISIBLE : View.GONE}"
                    app:layout_constraintLeft_toRightOf="@+id/post_image_photo_container"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/post_image_photo_container">

                    <ImageView
                        android:id="@+id/post_image_location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#CCC"
                        android:contentDescription="@string/content_description_post_location"
                        android:scaleType="centerCrop"
                        android:src="@{post.locationUrl}" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="end"
                        android:contentDescription="@string/content_description_post_delete_location"
                        android:onClick="@{()->presenter.updateLocation(0,0)}"
                        app:srcCompat="@drawable/ic_remove_image" />
                </FrameLayout>
            </android.support.constraint.ConstraintLayout>
        </ScrollView>

        <include
            android:id="@+id/post_saving"
            layout="@layout/post_loading"
            android:visibility="gone" />
    </FrameLayout>
</layout>