...

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/post_list_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:onClick="@{()->presenter.addNewPost()}"
...
                    android:id="@+id/post_list_empty"
                    layout="@layout/empty_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/post_list_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </FrameLayout>
        </android.support.v4.widget.SwipeRefreshLayout>

    </android.support.constraint.ConstraintLayout>
...
